--- a/SharpSploit.Tests/SharpSploit.Tests/SharpSploit.Tests.csproj
+++ b/SharpSploit.Tests/SharpSploit.Tests/SharpSploit.Tests.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Execution\ShellCodeTests.cs" />
     <Compile Include="Execution\ShellTests.cs" />
     <Compile Include="LateralMovement\DCOMTests.cs" />
+    <Compile Include="LateralMovement\PassTheHash.cs" />
     <Compile Include="LateralMovement\PowerShellRemotingTests.cs" />
     <Compile Include="LateralMovement\SCMTests.cs" />
     <Compile Include="LateralMovement\WMITests.cs" />
